2007-07-31  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_BattstatApplet.xml: use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* battstat.h:
	* battstat_applet.c: (update_tooltip), (destroy_applet),
	(about_cb), (create_layout), (battstat_applet_fill): 
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-06-28  Daniel Drake  <dsd@gentoo.org>

	* acpi-linux.c: 2.6.21 compatibility fix (based on patch by Alan
	Swanson). Also improved error passing/handling. (#427562)

2007-02-10  AP Singh Alam  <aalam@users.sf.net>

	* docs/pa/pa.po: Punjabi is added
	* docs/Makefile.am: Punjabi (pa) is added

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* power-management.c: (power_management_initialise):
	Don't mix declarations and code.

2007-01-25  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added English (British) translation
	* docs/Makefile.am: Added en_GB to DOCS_LINGUAS

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/battstat.xml: Added role=maintainer.
	* power-management.c: Remove duplicated includes.
	* properties.c: Same here.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: catch a -1 time and format it correctly

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat.h: Rename pixtimer to timeout_id.  Add 'timeout' to record
	  current timeout length.
	* battstat_applet.c: Change pixtimer to timeout_id.  Dynamically
	  determine length of time for next wakeup according to Bug #353885.
	  1 second if on battery.  10 seconds if on AC (reduce polling on
	  servers).

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c:
	* battstat-hal.h:
	* power-management.c:
	* battstat.h: