@@ -6,6 +6,7 @@ accessx-status/GNOME_AccessxStatusApplet.server.in.in
 accessx-status/applet.c
 battstat/GNOME_BattstatApplet.server.in.in
 battstat/GNOME_BattstatApplet.xml
+battstat/battstat-hal.c
 battstat/battstat.schemas.in
 battstat/battstat_applet.c
 battstat/battstat_applet.glade
