@@ -1,3 +1,8 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* POTFILES.in: Added battstat-hal.c, patch from Takao Fujiwara
+	(Bug #460083).
+
 2007-10-08  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
