@@ -1,3 +1,8 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* battstat-hal.c (battstat_hal_initialise): Allow translation of
+	error messages (patch from Takao Fujiwara, Bug #460083).
+
 2007-07-31  Daniel Nylander <po@danielnylander.se>
 
 	* docs/sv/sv.po: Updated Swedish translation.
